--- a/vignettes/xms.Rmd
+++ b/vignettes/xms.Rmd
@@ -456,7 +456,7 @@ The inference conditions were evaluated as follows:
 That said, the conditions for parametric inference were met.
 
 ### Statistical Method
-A chi-square trend test also called the Cochran-Armitage test for trend was appropriate for testing association between a nominal variable with two levels (opinion) and an ordinal variable (say year).
+A **hypothesis based ** chi-square trend test also called the Cochran-Armitage test for trend was appropriate for testing association between a nominal variable with two levels (opinion) and an ordinal variable (say year). Confidence are not available for this test. 
 
 ### Test Results
 Chi-square tests for trend in proportions was conducted in order to challenge the null hypothesis that no linear trend exists in opinion over time. 
@@ -572,7 +572,7 @@ The inference conditions were evaluated as follows:
 As such, the conditions for parametric inference were met.
 
 ### Statistical Method
-A chi-square test of independence was used to test for an association between opinion and all levels of the region variable at once. To evaluate the differences in proportion of opinion across regions, multiple difference in proportion tests were performed.
+A chi-square test of independence was used to test for an association between opinion and all levels of the region variable at once. To evaluate the differences in proportion of opinion across regions, multiple difference in proportion tests were performed. Though confidence intervals were provided for the true difference in proportions in the population, no comparison was made between the confidence intervals for the differences and the chi-square hypothesis test.
 
 ### Test Results
 #### Chi-square Test of Independence
@@ -709,7 +709,7 @@ The inference conditions were evaluated as follows:
 As such, the conditions for parametric inference were met.
 
 ### Statistical Method
-A chi-square test of independence was used to test for an association between opinion and all levels of the class variable at once. To evaluate the differences in proportion of opinion across classes, multiple difference in proportion tests were performed.
+A chi-square test of independence was used to test for an association between opinion and all levels of the class variable at once. To evaluate the differences in proportion of opinion across classes, multiple difference in proportion tests were performed. Though confidence intervals were provided for the true difference in proportions in the population, no comparison was made between the confidence intervals for the differences and the chi-square hypothesis test.  
 
 ### Test Results
 #### Chi-square Test of Independence
@@ -817,7 +817,7 @@ The inference conditions were evaluated as follows:
 As such, the conditions for parametric inference were met.
 
 ### Statistical Method
-To test the association between opinion and gender, the difference in proportion of opinion between genders was computed with p-values and 95% confidence intervals for the true differences in opinion.  
+To test the association between opinion and gender, the difference in proportion of opinion between genders was computed with p-values and 95% confidence intervals for the true differences in opinion.  The results of both the hypothesis test and confidence interval approaches were compared for agreement.
 
 ### Test Results
 `r gender$tests$dp$statements[[1]]$type`
@@ -935,7 +935,7 @@ The inference conditions were evaluated as follows:
 As such, the conditions for parametric inference were met.
 
 ### Statistical Method
-A chi-square test of independence was used to test for an association between opinion and all levels of the age variable at once. To evaluate the differences in proportion of opinion across ages, multiple difference in proportion tests were performed.
+A chi-square test of independence was used to test for an association between opinion and all levels of the age variable at once. To evaluate the differences in proportion of opinion across ages, multiple difference in proportion tests were performed. Though confidence intervals were provided for the true difference in proportions in the population, no comparison was made between the confidence intervals for the differences and the chi-square hypothesis test.  
 
 ### Test Results
 #### Chi-square Test of Independence
@@ -1065,7 +1065,7 @@ The inference conditions were evaluated as follows:
 As such, the conditions for parametric inference were met.
 
 ### Statistical Method
-A chi-square test of independence was used to test for an association between opinion and all levels of the marital status variable at once. To evaluate the differences in proportion of opinion by marital status, multiple difference in proportion tests were performed.
+A chi-square test of independence was used to test for an association between opinion and all levels of the marital status variable at once. To evaluate the differences in proportion of opinion by marital status, multiple difference in proportion tests were performed. Though confidence intervals were provided for the true difference in proportions in the population, no comparison was made between the confidence intervals for the differences and the chi-square hypothesis test.  
 
 ### Test Results
 #### Chi-square Test of Independence
