--- a/vignettes/xms.Rmd
+++ b/vignettes/xms.Rmd
@@ -79,7 +79,7 @@ The sampling strategy employed by GSS was designed to give each household an equ
 ### Data Sampling Bias
 The GSS samples closely resemble distributions reported in the Census and other authoritative sources. However, survey non-response, sampling variation, and various other factors have introduced potential sources of bias and resulted in variance from Census distributions on some variables. For instance all full-probability samples under-represent males and block quota samples under-represented men in full-time employment. Weights were designed (and should be employed when using GSS 2004 or later), to assure proper representation of non-response sub-samples, and other factors. For a full discussion of distributional variation due to non-response, one should refer to the GSS Methodological Reports in the help and resources section at https://gssdataexplorer.norc.org/,
 
-This full probability design was acknowledged by the National Science Foundation to be superior to simple random sampling, and **generalizable** to the population of adult citizens in America.  Consisting of over 60,000 individual responses, spanning over 40 years, the GSS data remains one of the nations treasures, providing data for inference about American society to researchers, academics, students, politicians, and opinion makers.  Yet, as respondents were randomly selected (not assigned), one is careful to limit inferences to **association, and not causation.**  That said, the extent to which results of a research question can be generalized to the population will require that the inference conditions are met, specifically the proportion success/failure condition. As such, the question of "generalize-ability" will need to be re-addressed independently for each research question.
+This full probability design was acknowledged by the National Science Foundation to be superior to simple random sampling, and **generalizable** to the population of adult citizens in America.  Consisting of over 60,000 individual responses, spanning over 40 years, the GSS data remains one of the nations treasures, providing data for inference about American society to researchers, academics, students, politicians, and opinion makers.  Yet, as respondents were randomly selected (not assigned), one is careful to limit inferences to **association, and not causation.**  That said, the extent to which results of a research question can be generalized to the population will require that the inference conditions are met, specifically the proportion success/failure condition. As such, **the question of "generalize-ability" will need to be re-addressed independently for each research question. Because there was no random assignment to groups, no causal inferences were drawn from this data.**
 
 ### Data Variables
 The following table lists the variables extracted from the GSS data.
@@ -453,7 +453,7 @@ The inference conditions were evaluated as follows:
 3. **Sample Size:**  The expected frequency of non-traditional opinion per year, under the null hypothesis, was `r round(mean(pre2012$tables$freqTbl[2,,1], 0))` and `r round(mean(pre2012$tables$freqTbl[2,,2], 0))` for males and females respectively, exceeding the minimum five-count threshold. Furthermore, the sample was less than 10% of the U.S. adult population.  
 4. **Degrees of Freedom:** The chi-square test for trends has only one degree of freedom because the linear scoring means that when one expected value is given all the others are fixed.  
 
-That said, the conditions for parametric inference were met.
+That said, the conditions for parametric inference were met. Moreover, the results are generalizable to the U.S.population.
 
 ### Statistical Method
 A **hypothesis based ** chi-square trend test also called the Cochran-Armitage test for trend was appropriate for testing association between a nominal variable with two levels (opinion) and an ordinal variable (say year). Confidence are not available for this test. 
@@ -569,7 +569,7 @@ The inference conditions were evaluated as follows:
 3. **Sample Size:**  As shown in `r kfigr::figr(label = "regionExpFreq", prefix = TRUE, link = TRUE, type="Table")`, all *expected* counts exceeded the minimum five-count threshold. Furthermore, the sample was less than 10% of the U.S. adult population.  
 4. **Degrees of Freedom:** The contingency tables were associated with a chi-square distribution with `r region$tests$x2$htest$parameter` degrees of freedom, exceeding the minimum threshold of two degrees of freedom for chi-square testing.
 
-As such, the conditions for parametric inference were met.
+As such, the conditions for parametric inference were met. Moreover, the results are generalizable to the U.S.population.
 
 ### Statistical Method
 A chi-square test of independence was used to test for an association between opinion and all levels of the region variable at once. To evaluate the differences in proportion of opinion across regions, multiple difference in proportion tests were performed. Though confidence intervals were provided for the true difference in proportions in the population, no comparison was made between the confidence intervals for the differences and the chi-square hypothesis test.
@@ -706,7 +706,7 @@ The inference conditions were evaluated as follows:
 3. **Sample Size:**  As shown in `r kfigr::figr(label = "classExpFreq", prefix = TRUE, link = TRUE, type="Table")`, all *expected* counts exceeded the minimum five-count threshold. Furthermore, the sample was less than 10% of the U.S. adult population.  
 4. **Degrees of Freedom:** The contingency tables were associated with a chi-square distribution with `r class$tests$x2$htest$parameter` degrees of freedom, exceeding the minimum threshold of two degrees of freedom for chi-square testing.
 
-As such, the conditions for parametric inference were met.
+As such, the conditions for parametric inference were met. Moreover, the results are generalizable to the U.S.population.
 
 ### Statistical Method
 A chi-square test of independence was used to test for an association between opinion and all levels of the class variable at once. To evaluate the differences in proportion of opinion across classes, multiple difference in proportion tests were performed. Though confidence intervals were provided for the true difference in proportions in the population, no comparison was made between the confidence intervals for the differences and the chi-square hypothesis test.  
@@ -814,7 +814,7 @@ The inference conditions were evaluated as follows:
 1. **Independence:** All cases that contributed counts to the table were independent of all the other cases in the table.  
 2. **Success/Failure:** As indicated in `r kfigr::figr(label = "genderExpFreq", prefix = TRUE, link = TRUE, type="Table")`, the observed number of successes (non-traditional opinion) and failures (traditional opinion) met the minimum 10 count threshold across all genders.  
 
-As such, the conditions for parametric inference were met.
+As such, the conditions for parametric inference were met. Moreover, the results are generalizable to the U.S.population.
 
 ### Statistical Method
 To test the association between opinion and gender, the difference in proportion of opinion between genders was computed with p-values and 95% confidence intervals for the true differences in opinion.  The results of both the hypothesis test and confidence interval approaches were compared for agreement.
@@ -932,7 +932,7 @@ The inference conditions were evaluated as follows:
 3. **Sample Size:**  As shown in `r kfigr::figr(label = "ageExpFreq", prefix = TRUE, link = TRUE, type="Table")`, all *expected* counts exceeded the minimum five-count threshold. Furthermore, the sample was less than 10% of the U.S. adult population.  
 4. **Degrees of Freedom:** The contingency tables were associated with a chi-square distribution with `r age$tests$x2$htest$parameter` degrees of freedom, exceeding the minimum threshold of two degrees of freedom for chi-square testing.
 
-As such, the conditions for parametric inference were met.
+As such, the conditions for parametric inference were met. Moreover, the results are generalizable to the U.S.population.
 
 ### Statistical Method
 A chi-square test of independence was used to test for an association between opinion and all levels of the age variable at once. To evaluate the differences in proportion of opinion across ages, multiple difference in proportion tests were performed. Though confidence intervals were provided for the true difference in proportions in the population, no comparison was made between the confidence intervals for the differences and the chi-square hypothesis test.  
@@ -1062,7 +1062,7 @@ The inference conditions were evaluated as follows:
 3. **Sample Size:**  As shown in `r kfigr::figr(label = "maritalExpFreq", prefix = TRUE, link = TRUE, type="Table")`, all *expected* counts exceeded the minimum five-count threshold. Furthermore, the sample was less than 10% of the U.S. adult population.  
 4. **Degrees of Freedom:** The contingency tables were associated with a chi-square distribution with `r marital$tests$x2$htest$parameter` degrees of freedom, exceeding the minimum threshold of two degrees of freedom for chi-square testing.
 
-As such, the conditions for parametric inference were met.
+As such, the conditions for parametric inference were met. Moreover, the results are generalizable to the U.S.population.
 
 ### Statistical Method
 A chi-square test of independence was used to test for an association between opinion and all levels of the marital status variable at once. To evaluate the differences in proportion of opinion by marital status, multiple difference in proportion tests were performed. Though confidence intervals were provided for the true difference in proportions in the population, no comparison was made between the confidence intervals for the differences and the chi-square hypothesis test.  
